@@ -1,4 +1,4 @@
-@set UPDATED 31 July 2011
-@set UPDATED-MONTH July 2011
+@set UPDATED 6 February 2012
+@set UPDATED-MONTH February 2012
 @set EDITION 6.0.1
 @set VERSION 6.0.1
